[package]
name = "peblock"
version = "0.1.0"
authors = ["PEshwar <par.esh1937@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0" , features = ["derive"]}
serde_json = "1.0"
crypto-hash = "0.3.3"
